// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSelector should render with color picker 1`] = `
<div
  className="sc-AxjAm huxFGW"
  onClick={[Function]}
  style={
    Object {
      "top": undefined,
    }
  }
>
  <div
    onChange={[Function]}
  >
    This is mocked ChromePicker. Color is 
  </div>
</div>
`;

exports[`ColorSelector should render without color picker 1`] = `
<div
  className="sc-AxjAm dsHdjF"
  onClick={[Function]}
  style={
    Object {
      "top": undefined,
    }
  }
>
  <div
    onChange={[Function]}
  >
    This is mocked ChromePicker. Color is 
  </div>
</div>
`;
